--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "H256SHA@##",
+    "Issuer": "http://localhost:5178/"
+  },
   "ConnectionStrings": {
-    "hca_Connection": "Server=DESKTOP-PLBCIKG;Database=HCA;User Id=sa;Password=css;Integrated Security=False;"
+    //"hca_Connection": "Server=DESKTOP-PLBCIKG;Database=HCA;User Id=sa;Password=css;Integrated Security=False;",
+    "hca_Connection": "Server=L-IT-HO01-110;Database=HCA;User Id=sa;Password=abc@123;Integrated Security=False;"
   },
   "AllowedHosts": "*"
 }
